# ARIA

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION.md  EXECUTION_STATUS.md  README.md  SECURITY.md  main.py  requirements.txt
backend/: .env.example  PUBLISHING.md  PYPI_README.md  main.py  pyproject.toml  requirements.txt
backend/adapters/: __init__.py  langgraph_adapter.py  openai_adapter.py
backend/api/: main.py  schemas.py
backend/aria/: cli.py  sdk.py
backend/aria/adapters/: __init__.py  taubench_adapter.py
backend/aria/agents/: __init__.py  critic.py  diagnostician.py  executor.py  grounding.py  observer.py  refiner.py  validator.py
backend/aria/classifiers/: __init__.py  failure_classifier.py
backend/aria/config/: __init__.py  ablation.py  settings.py
backend/aria/dspy_programs/: __init__.py  diagnostician.py
backend/aria/eval/: __init__.py  dataset.py  metrics.py
backend/aria/graph/: __init__.py  builder.py
backend/aria/state/: __init__.py  schema.py
backend/aria/store/: __init__.py  experience_store.py
backend/aria/tools/: __init__.py  calculator.py  file_ops.py  web_search.py
backend/aria/utils/: __init__.py
backend/data/: experience_store.json
backend/data/2wiki/: tasks.json
backend/data/api_runs/: 05042d72.json  120dd0ad.json  2a7c656d.json  3d868cd1.json  48b8cc84.json  54f61d3c.json  554fe79d.json  709b7ae6.json  82a6b04c.json  8ad5ff72.json  8d6b9985.json  9a35ed34.json  caeb8973.json  cc7e021d.json  d1b2cdfc.json  d3d4c974.json  d8889782.json  e19d37d5.json
backend/data/gaia/: agreement_report.json  progress.json  tasks.json
backend/data/gaia/results/: 0383a3ee-47a7-41a4-b493-519bdefe0488.json  11af4e1a-5f45-467d-9aeb-46f4bb0bf034.json  23dd907f-1261-4488-b21c-e9185af91d5e.json  27d5d136-8563-469e-92bf-fd103c28b57c.json  2d83110e-a098-4ebb-9987-066c06fa42d0.json  305ac316-eef6-4446-960a-92d80d542f82.json  3cef3a44-215e-4aed-8e3b-b1e3f08063b7.json  3f57289b-8c60-48be-bd80-01f8099ca449.json  42576abe-0deb-4869-8c63-225c2d75a95a.json  46719c30-f4c3-4cad-be07-d5cb21eee6bb.json  4b650a35-8529-4695-89ed-8dc7a500a498.json  4b6bb5f7-f634-410e-815d-e673ab7f8632.json  4fc2f1ae-8625-45b5-ab34-ad4433bc21f8.json  50ad0280-0819-4bd9-b275-5de32d3b5bcb.json  50ec8903-b81f-4257-9450-1085afd2c319.json  5188369a-3bbe-43d8-8b94-11558f909a08.json  5a0c1adf-205e-4841-a666-7c3ef95def9d.json  5d0080cb-90d7-4712-bc33-848150e917d3.json  6f37996b-2ac7-44b0-8e68-6d28256631b4.json  72e110e7-464c-453c-a309-90a95aed6538.json  7673d772-ef80-4f0f-a602-1bf4485c9b43.json  7d4a7d1d-cac6-44a8-96e8-ea9584a70825.json  840bfca7-4f7b-481a-8794-c560c340185d.json  8e867cd7-cff9-4e6c-867a-ff5ddc2550be.json  935e2cff-ae78-4218-b3f5-115589b19dae.json  9d191bce-651d-4746-be2d-7ef8ecadb9c2.json  a0068077-79f4-461a-adfe-75c1a4148545.json  a0c07678-e491-4bbc-8f0b-07405144218f.json  a1e91b78-d3d8-4675-bb8d-62741b4b68a6.json  b415aba4-4b68-4fc6-9b89-2c812e55a3e1.json  b816bfce-3d80-4913-a07d-69b752ce6377.json  bda648d7-d618-4883-88f4-3466eabd860e.json  c365c1c7-a3db-4d5e-a9a1-66f56eae7865.json  c714ab3a-da30-4603-bacd-d008800188b9.json  cabe07ed-9eca-40ea-8ead-410ef5e83f91.json  cf106601-ab4f-4af9-b045-5295fe67b37d.json  d0633230-7067-47a9-9dbf-ee11e0a2cdd6.json  dc22a632-937f-4e6a-b72f-ba0ff3f5ff97.json  dc28cf18-6431-458b-83ef-64b3ce566c10.json  (+3 more)
backend/data/gsm8k/: tasks.json
backend/data/hotpotqa/: tasks.json
backend/data/realbench/: tasks.json
backend/data/swebench/: tasks.json
backend/data/synthetic/: context_overflow.jsonl  goal_misalignment.jsonl  hallucination_loop.jsonl  none.jsonl  prompt_drift.jsonl  tool_misuse.jsonl
backend/scripts/: analyze_realbench.py  audit_gaps.py  bench_download.py  bench_run.py  check_gaia_state.py  check_results.py  compare_validation_runs.py  compile_diagnostician.py  compute_kappa.py  confusion_audit.py  data_stats.py  eval_metrics.py  freeze_test_set.py  gaia_agreement.py  gaia_download.py  gaia_run_batch.py  generate_synthetic_data.py  inject_failure.py  inject_rare_classes.py  inspect_misclassified.py  label_traces.py  recompile_diagnostician_v2.py  review_realbench.py  run_ablation.py  run_realbench.py  swebench_download.py  taubench_run.py  validate_critic_v2.py  validate_diagnostician.py
(+89 files in other folders)
