[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aria-agent-diagnostics"
version = "0.1.0"
description = "ARIA — diagnose why AI agents fail: failure taxonomy, requirement-aware evaluation, and trace diagnosis for LLM agents."
readme = "../README.md"
requires-python = ">=3.10"
license = { text = "Proprietary — research preview" }
authors = [{ name = "Ayush Singh" }]
keywords = ["llm-agents", "agent-evaluation", "failure-detection", "observability", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langgraph>=0.2.0,<0.3.0",
    "langchain>=0.3.0,<0.4.0",
    "langchain-core>=0.3.0,<0.4.0",
    "langchain-groq>=0.2.0,<0.3.0",
    "langchain-ollama>=0.2.0,<0.3.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",
    "sentence-transformers>=3.0.0,<4.0.0",
    "rich>=13.7.0,<14.0.0",
    "click>=8.1.0,<9.0.0",
    "httpx>=0.27.0,<0.28.0",
    "ddgs>=6.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "numpy>=1.26.0,<3.0.0",
    "dspy-ai>=2.4.0",
    "xgboost>=2.0.0,<3.0.0",
    "scikit-learn>=1.4.0,<2.0.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "requests>=2.31"]
dev = ["pytest>=8.2.0", "pytest-asyncio>=0.23.0", "ruff>=0.4.0"]

[project.scripts]
aria = "main:run"

[tool.setuptools.packages.find]
include = ["aria*", "api*", "adapters*"]
exclude = ["tests*", "scripts*", "data*", "logs*", "workspace*"]
