[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ariadx"
version = "0.1.0"
description = "ARIA — diagnose why AI agents fail. Failure taxonomy, requirement-aware evaluation, factual grounding, and trace diagnosis for LLM agents."
readme = "PYPI_README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Ayush Singh", email = "k2aserendipity@gmail.com" }]
keywords = [
    "llm-agents",
    "agent-evaluation",
    "agent-reliability",
    "failure-detection",
    "failure-diagnosis",
    "hallucination-detection",
    "observability",
    "langgraph",
    "dspy",
    "ai-safety",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "langgraph>=0.2.0,<0.3.0",
    "langchain>=0.3.0,<0.4.0",
    "langchain-core>=0.3.0,<0.4.0",
    "langchain-groq>=0.2.0,<0.3.0",
    "langchain-ollama>=0.2.0,<0.3.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",
    "sentence-transformers>=3.0.0,<4.0.0",
    "rich>=13.7.0,<14.0.0",
    "click>=8.1.0,<9.0.0",
    "httpx>=0.27.0,<0.28.0",
    "ddgs>=6.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "numpy>=1.26.0,<3.0.0",
    "dspy-ai>=2.4.0",
    "xgboost>=2.0.0,<3.0.0",
    "scikit-learn>=1.4.0,<2.0.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "requests>=2.31"]
dev = ["pytest>=8.2.0", "pytest-asyncio>=0.23.0", "ruff>=0.4.0", "build>=1.2", "twine>=5.0"]

[project.urls]
Homepage = "https://github.com/AyushSingh110/ARIA"
Documentation = "https://github.com/AyushSingh110/ARIA/tree/main/docs"
Repository = "https://github.com/AyushSingh110/ARIA"
Issues = "https://github.com/AyushSingh110/ARIA/issues"

[project.scripts]
aria = "aria.cli:run"

[tool.setuptools.packages.find]
include = ["aria*", "api*", "adapters*"]
exclude = ["tests*", "scripts*", "data*", "logs*", "workspace*"]
